provision/k8s/harbor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    app.kubernetes.io/name: harbor
    app.kubernetes.io/part-of: harbor
