provision/k8s/harbor/release.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
