provision/k8s/harbor/core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbor-core
  namespace: harbor
  labels:
    app.kubernetes.io/name: harbor
    app.kubernetes.io/component: core
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: harbor
      app.kubernetes.io/component: core
  template:
    metadata:
      labels:
        app.kubernetes.io/name: harbor
        app.kubernetes.io/component: core
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: core
          image: goharbor/harbor-core:v2.11.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: core-config
              mountPath: /etc/core/app.conf
              subPath: app.conf
            - name: token-private-key
              mountPath: /etc/core/private_key.pem
              subPath: private_key.pem
            - name: token-cert
              mountPath: /etc/core/certificates/root.crt
              subPath: root.crt
            - name: core-data
              mountPath: /data
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /api/v2.0/ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/v2.0/ping
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
      volumes:
        - name: core-config
          configMap:
            name: harbor-core-config
        - name: token-private-key
          secret:
            secretName: harbor-secret
            items:
              - key: private_key.pem
                path: private_key.pem
        - name: token-cert
          secret:
            secretName: harbor-secret
            items:
              - key: root.crt
                path: root.crt
        - name: core-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: harbor-core
  namespace: harbor
  labels:
    app.kubernetes.io/name: harbor
    app.kubernetes.io/component: core
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: core
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: harbor
    app.kubernetes.io/component: core
